--- a/friend.html
+++ b/friend.html
@@ -41,7 +41,7 @@
 
     <script>
         const userName = localStorage.getItem('userName'); // Assuming you store the user's name in localStorage
-        const referralLink = `https://shorturl.at/6Avu4?referral=${userName}`;
+        const referralLink = 'https://t.me/star_coin_master_bot=${userName}`;
 
         function copyReferralLink() {
             navigator.clipboard.writeText(referralLink).then(() => {
